# InsightForge-MCP

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml  requirements.txt
backend/: pyproject.toml  requirements.txt
backend/exports/: .gitkeep
backend/scripts/: check_db.py  init_db.py  schema.sql  seed_data.py  smoke_test.py
backend/src/insightforge_mcp/: __init__.py  config.py  database.py  reporting.py  server.py  sql_guard.py
backend/tests/: test_sql_guard.py
