[project]
name = "insightforge-mcp"
version = "0.1.0"
description = "An MCP server that turns a PostgreSQL database into an AI Business Analyst."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.4.0",
    "psycopg[binary,pool]>=3.1",
    "pydantic-settings>=2.2",
    "pandas>=2.2",
    "matplotlib>=3.8",
]

[project.scripts]
insightforge-mcp = "insightforge_mcp.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["backend/src"]

[tool.ruff]
line-length = 100
target-version = "py311"
